--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/Frontend/public/fbb.png" />
+    <link rel="icon" type="image/png" href="/fbb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FLY BUY BRAND</title>
-  </head>
+    <meta name="FLY BUY BRAND Experience The Luxury" content="FBB Store has grown to become a leading e-commerce destination for fashion-conscious individuals and families.">
+      </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
