--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,8 +5,14 @@
     <link rel="icon" type="image/png" href="/fbb.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FLY BUY BRAND</title>
-    <meta name="FLY BUY BRAND Experience The Luxury" content="FBB Store has grown to become a leading e-commerce destination for fashion-conscious individuals and families.">
-      </head>
+    <!-- Add more specific meta tags -->
+    <meta name="description" content="FBB Store has grown to become a leading e-commerce destination for fashion-conscious individuals and families.">
+    <meta name="keywords" content="fashion, clothing, accessories, online shopping">
+    <!-- Add Open Graph tags for better social sharing -->
+    <meta property="og:title" content="FLY BUY BRAND">
+    <meta property="og:description" content="Experience The Luxury - Your Premier Fashion Destination">
+    <meta property="og:type" content="website">
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
